tests/codegen/fail/input_object/enum/derive_no_fields.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
enum Object {}

fn main() {}
